wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
.sticky-cart {
  background: $color-slate;
  color: $color-white;
  text-align: center;

  h3 {
    font-size: 30px;
  }

  dt {
    @extend h5;

    margin-top: 1em;
    padding: 5px;
    background: $color-dark-slate;
  }

  dd {
    margin: 0;
    padding: 10px;
  }

  @media (max-width: 991px) {
    display: none;
  }
}

.form-step {
  position: relative;
  margin-top: 4em;
}

.form-section {
  position: relative;
  margin-bottom: 20px;
  border: none;
  box-shadow: 0 0 10px lighten($color-medium-grey, 20%);

  & > legend {
    font-family: $primary-font;
    font-weight: $font-weight-medium;
    font-size: $font-size-medium;
    text-transform: uppercase;
    color: $color-dark-slate;
    text-align: center;
    background: $color-white;
    padding: 0 10px;
  }
}

.form-row {
  position: relative;
  margin: 0 0 rem-calc(20px);
}

// Form Progress
ol.form-progress {
  color: $color-dark-slate;
  list-style: none;
  display: table;
  margin: 1.5rem 0;
  table-layout: fixed;
  width: 100%;
  padding: 0;
  counter-reset: progressStep;

  &:focus {
    outline: 0;

    li[data-step-current] {
      outline: $color-dark-slate dotted 1px;
    }
  }

  li {
    font-family: $primary-font;
    font-weight: $font-weight-light;
    text-align: center;
    display: table-cell;
    list-style: none;
    line-height: 1.2em;
    margin: 0;
    padding: 2rem 0 0;
    position: relative;
    width: 100%;
    counter-increment: progressStep;

    &::before, &::after {
      background: $color-dark-slate;
      color: $color-white;
      display: block;
      position: absolute;
    }

    &::before {
      content: counter(progressStep);
      height: 1.5rem;
      left: 50%;
      margin-left: -0.75rem;
      line-height: 1.5rem;
      padding-left: 0.1rem;
      top: 0;
      transform: scale(1, 1);
      width: 1.5rem;
      z-index: 1;
      font-family: $primary-font;
      font-weight: $font-weight-light;
    }

    &::after {
      content: '';
      height: 0.25rem;
      left: -50%;
      top: 0.65rem;
      width: 100%;
    }

    &[data-step-current] {
      color: $color-sky-blue;
      font-weight: $font-weight-medium;

      &::before, &::after {
        background: $color-sky-blue;
        color: $color-white;
      }
    }

    &[data-step-complete] {
      color: $color-dark-slate;

      &::before, &::after {
        background: $color-sky-blue;
        color: $color-white;
      }
    }

    &:first-child::after {
      display: none;
    }
  }
}

.buynowform {
  .row {
    padding: 1em 0;
  }

  p {
    margin: 0 0 1em;
    font-size: 0.9em;
  }

  .buttons {
    display: flex;
    justify-content: space-between;

    .btn {
      margin: 1em 1em 3em 1em;
    }
  }

  input#confirmation + .help {
    display: none !important;
  }

  #total-price {
    text-align: center;
    text-transform: uppercase;
    font-family: $primary-font;
    font-size: 1.5em;
    font-weight: 500;
    color: $color-sky-blue;
  }

  #stripe-elements-button {
    max-width: 200px;
    margin: 10px auto;
  }
}

.billing-address-same {
  display: none;
}

.valid {
  border-bottom: 3px solid $color-sky-blue !important;
}

div.help {
  color: $color-error;
  font-size: 10px;
  position: relative;
  bottom: 16px;
}

.tingle-modal-box {
  h4 {
    margin: 0;
  }

  p, li {
    font-size: 0.9em;
    line-height: 1.5em;
  }
}

.tingle-modal__close {
  font-size: 4rem;
}

